faster FFmpeg settings

--- a/DiskConverter/DiskConverter.csproj
+++ b/DiskConverter/DiskConverter.csproj
@@ -13,18 +13,20 @@
     <PlatformTarget>x64</PlatformTarget>
     <StartupObject></StartupObject>
     <IsPublishable>True</IsPublishable>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <BaseOutputPath>C:\Users\Luuk\Desktop\movpumpbin\DiskConverter Bin</BaseOutputPath>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <ApplicationIcon>diskico.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>none</DebugType>
+    <DebugType>full</DebugType>
+    <Optimize>True</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>none</DebugType>
+    <DebugType>full</DebugType>
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
